   * Be able to specify the level name (e.g. school|cons + standlrt) instead of just the level number (e.g. 2|cons + standlrt)
   * Omit 0| for all the cases except for that both 0| and 0|| exists in the formula.
   * Allow attached data to be picked up when running a model
   * Automatically convert logical/factor variables used as the response for Binomial models

Mon Jun 30 2014
1. Bug fixing
   * Return full covariance matrices in FP.cov and RP.cov
   * Fix level numbers in residual names for Multivariate/Multinomial models
   * Allow single-level binomial/Poisson/negative binomial models to be fitted
   * Fix output when Std. Err. is zero (for example if a parameter is collinear)
   * Fix reported number of observations and observations in use
   * If RIGLS is specified as the estimation method correctly reflect this in the model output
   * Don't calculate starting residuals for cross-classified models
   * BUGS output should now make use of prior specification for non-cross-classified models
   * Added check that a denominator has been specified for Binomial models
   * Added check that no variables are made random at level-one in discrete response models
   * Added check that response variables for multinomial models have at least two categories
   * Added check that the reference category is valid for multinomial models
   * Added check that the levels for hierarchical centring and parameter expansion are valid
   * Added check that nonlinear options are valid
   * Added check for the response type and link function in Mixed response models
   * Added chcek that the specified distribution is valid
   * Fixed macro generation for Poisson responses in mixed models
   * smat option can now apply to more than one level
   * Added check that the IDs and weights are valid for multiple membership models
   * Removed redundant estIGLS/estMCMC outputs
   * Make offset optional for Poisson/Negative binomial models